--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <section class="masonry">
-    
+
     <div class="container">
       <select id="selectSort" class="form-control my-5">
         <option disabled selected>Выберите сортировку</option>
         <option value="dec">От дорогих</option>
         <option value="inc">От дешевых</option>
       </select>
-      <div class="row row-cols-3" id="track-list">
+      <div class="row row-cols-3" id="goods-list">
         <!-- <div class="col">
             <div class="card track">
               <img src="..." class="card-img-top" alt="..." />
