--- a/index.html
+++ b/index.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <title>JS</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-  <title>JS</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <section class="masonry">
-    <div class="container ">
-      <div class="row justify-content-between">
-        <div class="col-2">
-          <form class="form-column" id="filterList">
-            <!-- Brand list here-->
-          </form>
-        </div>
-        <div class="workspace col-10">
-          <select id="selectSort" class="form-control my-5">
-            <option disabled selected>Выберите сортировку</option>
-            <option value="price-dec">От дорогих к дешевым</option>
-            <option value="price-inc">От дешевых к дорогим</option>
-            <option value="comments_mark-dec">По рейтингу вниз</option>
-            <option value="comments_mark-inc">По рейтингу вверх</option>
-          </select>
-          <form class="form-inline" id="filterForm">
-            <div class="form-group mx-sm-3 mb-2">
-              <input name="term" type="search" class="form-control" id="inputPassword2" placeholder="Search">
+  <body>
+    <section class="masonry">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-2">
+            <form class="form-column" id="brandList">
+              <!-- Brand list here-->
+            </form>
+          </div>
+          <div class="workspace col-10">
+            <select id="selectSort" class="form-control my-5">
+              <option disabled selected>Выберите сортировку</option>
+              <option value="price-dec">От дорогих к дешевым</option>
+              <option value="price-inc">От дешевых к дорогим</option>
+              <option value="comments_mark-dec">По рейтингу вниз</option>
+              <option value="comments_mark-inc">По рейтингу вверх</option>
+            </select>
+            <form class="form-inline" id="filterForm">
+              <div class="form-group mx-sm-3 mb-2">
+                <input
+                  name="term"
+                  type="search"
+                  class="form-control"
+                  id="inputPassword2"
+                  placeholder="Search"
+                />
+              </div>
+              <button type="submit" class="btn btn-primary mb-2">
+                Confirm
+              </button>
+            </form>
+            <div class="row row-cols-3" id="products-list">
+              <!-- Cards list here -->
             </div>
-            <button type="submit" class="btn btn-primary mb-2">Confirm</button>
-          </form>
-          <div class="row row-cols-3" id="products-list">
-            <!-- Cards list here -->
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <button id="btn" class="btn btn-primary m-5">CLick</button>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
-  <script src="data.js"></script>
-  <script src="app2.js"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="data.js"></script>
+    <script src="app2.js"></script>
+  </body>
 </html>
