--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-2">
-            <form class="form-column" id="brandList">
+            <form class="form-column" name="filterBrands" id="filterBrands">
               <!-- Brand list here-->
             </form>
+            <button class="btn btn-success mt-3" id="filterBtn">Фильтровать</button>
           </div>
           <div class="workspace col-10">
             <select id="selectSort" class="form-control my-5">
@@ -33,7 +34,7 @@
               <option value="comments_mark-dec">По рейтингу вниз</option>
               <option value="comments_mark-inc">По рейтингу вверх</option>
             </select>
-            <form class="form-inline" id="filterForm">
+            <!-- <form class="form-inline" id="filterForm">
               <div class="form-group mx-sm-3 mb-2">
                 <input
                   name="term"
@@ -46,7 +47,7 @@
               <button type="submit" class="btn btn-primary mb-2">
                 Confirm
               </button>
-            </form>
+            </form> -->
             <div class="row row-cols-3" id="products-list">
               <!-- Cards list here -->
             </div>
