--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
           </div>
           <style>
-            .cart-body{
+            .cart-body {
               max-height: 300px;
               overflow-y: auto;
             }
@@ -62,6 +62,13 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-2 d-flex flex-column align-items-start">
+            <button
+              class="btn btn-primary wish-list"
+              name="wishList"
+              data-count="4"
+            >
+              Избранное
+            </button>
             <form
               class="form-column filter-brands"
               name="filterBrands"
