--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <button
               class="btn btn-primary wish-list"
               name="wishList"
-              data-count="4"
+              data-count=""
             >
               Избранное
             </button>
