--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
               class="btn btn-primary wish-list"
               name="wishList"
               data-count=""
+              id="wish-list"
             >
               Избранное
             </button>
