--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@
               </div>
             </div> -->
         </div>
-        <div class="cart-footer"></div>
+        <div class="cart-footer p-3">
+          <div class="row border p-3 mb-3">
+            <div class="col-2 offset-6 cart-footer-total">Total:</div>
+            <div class="col-1 cart-footer-qtty text-center">
+              <label id="cartFooterQtty"></label>
+            </div>
+            <div class="col-1 cart-footer-price text-center">
+              <label id="cartFooterPrice"></label>
+            </div>
+            <div class="col-1 cart-footer-curr text-center">
+              <label id="cartFooterCurr">UAH</label>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
