Sorting by price

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
           <form class="form-column filter-price d-flex flex-column align-items-start" name="filterPrice"
             id="filterPrice">
             <!-- Price filter here-->
+            <label class="fiter-price">Цена от</label>
+            <input class="filter-price-from" placeholder="" type="number" value="" min="" max="" name="priceFilterFrom"></input>
+            <label class="fiter-price">до</label>
+            <input class="filter-price-to" placeholder="" type="number" value="" min="" max="" name="priceFilterTo"></input>
           </form>
 
           <button class="btn btn-success mt-3 ml-3 btn-filter" id="filterBtn">
