Filter by price

--- a/index.html
+++ b/index.html
@@ -79,9 +79,16 @@
             id="filterPrice">
             <!-- Price filter here-->
             <label class="fiter-price">Цена от</label>
-            <input class="filter-price-from" placeholder="" type="number" value="" min="" max="" name="priceFilterFrom"></input>
+            <input class="filter-price-from" placeholder="" type="number" value="" min="" max=""
+              name="priceFilterFrom"></input>
             <label class="fiter-price">до</label>
-            <input class="filter-price-to" placeholder="" type="number" value="" min="" max="" name="priceFilterTo"></input>
+            <input class="filter-price-to" placeholder="" type="number" value="" min="" max=""
+              name="priceFilterTo"></input>
+          </form>
+
+          <form class="filter-avail" name="isAvailable" id="isAvailable">
+            <input class="form-avail-input" type="checkbox" name="filterAvail" value="available" id="formAvail">
+            <label class="form-available-label" for="formAvail">В наличии</label>
           </form>
 
           <button class="btn btn-success mt-3 ml-3 btn-filter" id="filterBtn">
