--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
               </div>
             </div> -->
         </div>
-        <div class="cart-footer p-3">
+        <div class="cart-footer p-3" id="cartFooter">
           <div class="row border p-3 mb-3">
             <div class="col-2 offset-6 cart-footer-total">Total:</div>
-            <div class="col-1 cart-footer-qtty text-center">
-              <label id="cartFooterQtty"></label>
+            <div class="col-1  text-center">
+              <label class="cart-footer-qtty" id="cartFooterQtty"></label>
             </div>
-            <div class="col-1 cart-footer-price text-center">
-              <label id="cartFooterPrice"></label>
+            <div class="col-1 text-center">
+              <label class="cart-footer-price" id="cartFooterPrice"></label>
             </div>
             <div class="col-1 cart-footer-curr text-center">
               <label id="cartFooterCurr">UAH</label>
