--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
               name="priceFilterTo"></input>
           </form>
 
-          <form class="filter-avail" name="isAvailable" id="isAvailable">
+          <!-- <form class="filter-avail" name="isAvailable" id="filterAvailable">
             <input class="form-avail-input" type="checkbox" name="filterAvail" value="available" id="formAvail">
             <label class="form-available-label" for="formAvail">В наличии</label>
-          </form>
+          </form> -->
 
           <button class="btn btn-success mt-3 ml-3 btn-filter" id="filterBtn">
             Фильтровать
